2008-01-29  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	- Containers should only be browsed if they are visible. This should
	  eliminate the problem of initial browsing taking down the whole
	  system.

	- Ref the service proxy before _begin_action() and unref it in callback.

2008-01-29  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h:

	Add functions to get currently selected Renderer's RenderingControl and
	volume.

	* src/av-cp/renderer-controls.c:

	Implement volume control.

2008-01-29  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.glade:
	* src/av-cp/renderer-controls.c:

	Listen to 'value-changed' signal rather than 'change-value'.

2008-01-29  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.glade:

	The update policy of GtkScale widgets should be 'discontinuous'

2008-01-28  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:
	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Supply metadata to SetAVTransportURI action and retrieve the metadata
	on the fly each time before setting the URI.

2008-01-28  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/renderer-combo.c:

	Work around for version-agnostic service proxy retreival/creation.

2008-01-28  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	Compare individual parts of the res and protocol info rather than
	using glob pattern matching.

2008-01-28  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:

	Set the volume-vscale accordingly whenever the volume of the currently
	selected renderer or the renderer selection itself, changes.

2008-01-27  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/gui.c:
	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:
